tests/snapshots/file@base@constructor@missing_arguments.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {\n  init(a, b) {}\n}\n\nvar foo = Foo(1); // expect runtime error: Expected 2 arguments but got 1.\n"
input_file: crafting_interpreters_test_files/constructor/missing_arguments.lox
---
OUT: 

===
ERR: 
  × wrong number of arguments, expected 2, got 1
   ╭─[5:14]
 4 │ 
 5 │ var foo = Foo(1); // expect runtime error: Expected 2 arguments but got 1.
   ·              ┬
   ·              ╰── here
   ╰────
